lab3 full functionality